<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/toolBarBlue"
            android:gravity="center">

            <TextView
                android:id="@+id/header_itemDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_details"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/pureWhite"
                android:textSize="18sp"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/imgBtn_close"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@drawable/closered"
                android:layout_weight="1"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                >

            <EditText
                android:id="@+id/user_id_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkGreen"
                android:hint="@string/item_no"
                android:singleLine="true"
                android:maxLength="15"
                android:focusable="false"
                android:inputType="textCapWords"
                android:digits="0123456789,QWERTYUIOPASDFGHJKLZXCVBNM qwertzuiopasdfghjklyxcvbnm"
                android:textSize="16sp"
                android:enabled="false"
                />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<TextView
                android:id="@+id/user_pass_textView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:padding="5dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/user_name_editText"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkGreen"
                android:inputType="text"
                android:textSize="16sp"
                tools:ignore="TextViewEdits" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                >

                <EditText
                    android:id="@+id/user_name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/darkGreen"
                    android:hint="@string/item_name"
                    android:singleLine="true"
                    android:maxLength="15"
                    android:focusable="false"
                    android:inputType="textCapWords"
                    android:digits="0123456789,QWERTYUIOPASDFGHJKLZXCVBNM qwertzuiopasdfghjklyxcvbnm"
                    android:textSize="16sp"
                    android:enabled="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<TextView
                android:id="@+id/user_add_textView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/item_quty"
                android:padding="5dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/user_qty_editText"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkGreen"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:focusable="auto"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">


                <EditText
                    android:id="@+id/user_qty_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/darkGreen"
                    android:hint="@string/item_qty"
                    android:maxLength="4"
                    android:inputType="numberDecimal"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<TextView
                android:id="@+id/user_number_textView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/item_price"
                android:padding="5dp"
                android:textSize="16sp" />

            -->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <EditText
                    android:id="@+id/user_price_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/darkGreen"
                    android:inputType="numberDecimal"
                    android:editable="false"
                    android:enabled="false"
                    android:focusable="auto"
                    android:textSize="16sp"
                    android:hint="@string/item_price"
                    tools:ignore="Autofill,Deprecated,LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<TextView
                android:id="@+id/user_dis_textView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/item_dis"
                android:padding="5dp"
                android:textSize="16sp" />

            -->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:visibility="gone">


                <EditText
                    android:id="@+id/user_dis_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/darkGreen"
                    android:inputType="numberDecimal"
                    android:maxLength="7"
                    android:hint="@string/item_dis"
                    android:focusable="auto"
                    android:textSize="16sp"
                    tools:ignore="Autofill,LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/button_Save_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:ems="11"
                android:text="@string/add"
                android:textColor="@color/White"
                android:theme="@style/MyButton"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_Cancel_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:ems="11"
                android:text="@string/cancel"
                android:theme="@style/MyButton1"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>