<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainCompleteLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/toolBarBlue" >


    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_marginBottom="8dp"
        android:background="@color/pureWhite"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/txtkaleMobilePos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolBarBlue"
            android:padding="5dp"
            android:text="@string/bumble_bee"
            android:textAlignment="center"
            android:textColor="@color/pureWhite"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <FrameLayout
            android:id="@+id/frameIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonBlue"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/giftSuccess"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/tick_iconn" />

            <ImageView
                android:id="@+id/giftError"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/error_iconn"/>


        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom">

            <TextView
                android:id="@+id/orderCompleteMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/done"
                android:textAlignment="center"
                android:textColor="@color/toolBarBlue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30sp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Order # :"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText,RtlCompat" />

                    <TextView
                        android:id="@+id/orderIdComplete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Total :"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="HardcodedText,RtlCompat" />

                    <TextView
                        android:id="@+id/totalComplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_0_00"
                        android:textAlignment="textEnd"
                        android:textColor="@color/toolBarBlue"
                        android:singleLine="true"
                        android:textSize="20sp"
                        tools:ignore="RtlCompat" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/received"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="RtlCompat" />

                    <TextView
                        android:id="@+id/receivedComplete"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_0_00"
                        android:textAlignment="textEnd"
                        android:textColor="@color/DarkRed"
                        android:textSize="20sp"
                        android:singleLine="true"
                        tools:ignore="RtlCompat" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/balance"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="RtlCompat" />

                    <TextView
                        android:id="@+id/balanceComplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_0_00"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:singleLine="true"
                        tools:ignore="RtlCompat" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnGoToOrderComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/please_wait"
                    android:textSize="18sp"
                    android:theme="@style/MyButton1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
